methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:10: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    if (isFacingTrail()) {
                     ^