methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     avance()
     while (isFacingTrail(Color.pink)) {
       avance()
     }
}
def hunt() {
  while (!estSurBiscuit()) {
    if (isFacingTrail()) {
      avance()
      baisseBrosse()
      leveBrosse()
    } else {
      gauche()
    }
    
  }
  prendBiscuit()
}
def isFacingTrail(c: Color):Boolean = {
  if (estFaceMur())
    return false
  avance()
  if (getCouleurSol()==Color.pink) {
    recule()
    return true
  }
  recule()
  return false
}